# sa_rebalance

./: .env.example  Cargo.toml  README.md  do_auth.command  git_commit_and_push.command  list_accounts.command  run_now.command  test_build_run.command
config/: blocklist.txt
scripts/: com.sa_rebalance.daily.plist  install.sh
src/: config.rs  execute.rs  history.rs  main.rs  notify.rs  rebalance.rs  sa.rs
src/schwab/: auth.rs  mod.rs  trader.rs
